trying the fcf files
 for the free version from majesticform.com.

--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -24,7 +24,7 @@
 
 /* CONTACT PAGE */
 
-        #fcf-form {
+        /* #fcf-form {
             display:block;
         }
         
@@ -183,6 +183,6 @@
         
         input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[type="button"].fcf-btn-block {
             width: 100%;
-        }
+        } */
 
         /*END OF CONTACT FORM*/
